<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desktop_wallpaper_video_game_super_mario_bros_mario_phone"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:fontFamily="@font/black_han_sans"
        android:hint="@string/ingrese_el_texto"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcomparar"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:fontFamily="@font/black_han_sans"
        android:hint="@string/ingrese_el_otro_texto"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/txtcomparar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTintMode="add"
        android:fontFamily="@font/black_han_sans"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <Button
        android:id="@+id/btncomparar"
        style="@style/Base.Theme.Comparar"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:backgroundTint="#E3311A"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/comparar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:cornerRadius="30sp"
        app:icon="@drawable/estrella_copia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        app:shapeAppearance="@style/Base.Theme.Comparar"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/black_han_sans"
        android:tag="@string/app_name"
        android:text="@string/comparar_texto"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <ImageView
        android:id="@+id/estrella"
        android:layout_width="152dp"
        android:layout_height="124dp"
        android:contentDescription="@string/estrella"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/estrella_copia"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnlimpiar"
        style="@style/Widget.Material3.Button"
        android:layout_width="204dp"
        android:layout_height="61dp"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="104dp"
        android:backgroundTint="#E2311A"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/limpiar"
        android:textSize="24sp"
        app:icon="@drawable/mario1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncomparar" />

    <ImageView
        android:id="@+id/mario"
        android:layout_width="72dp"
        android:layout_height="79dp"
        android:contentDescription="@string/mov"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759"
        app:srcCompat="@drawable/super_mario_bros__3_download_free_png" />


</androidx.constraintlayout.widget.ConstraintLayout>